окрім загальної інформації

--- a/index.html
+++ b/index.html
@@ -16,79 +16,107 @@
     <div class="main-container">
       <!-- SIDEBAR -->
       <div class="sidebar-container">
-        <div class="sidebar-image">
-          <img
-            src="./img/20220221_153131.jpg"
-            alt=""
-            class="sidebar-image"
-            width="300px"
-          />
+        <img src="./img/photo.jpg" alt="Me photo" class="sidebar-image" />
+        <!-- TECHNICAL SKILLS -->
+        <div class="skills-container">
+          <h3>TECHNICAL SKILLS:</h3>
+          <ul class="skills-list">
+            <li class="sidebar-item">
+              <span class="sidebar-info">HTML5/CSS3</span>
+            </li>
+            <li class="sidebar-item">
+              <span class="sidebar-info">JavaScript</span>
+            </li>
+            <li class="sidebar-item">
+              <span class="sidebar-info">GIT</span>
+            </li>
+            <li class="sidebar-item">
+              <span class="sidebar-info">REST API</span>
+            </li>
+            <li class="sidebar-item">
+              <span class="sidebar-info">NPM</span>
+            </li>
+            <li class="sidebar-item">
+              <span class="sidebar-info">FIGMA</span>
+            </li>
+            <li class="sidebar-item">
+              <span class="sidebar-info">PARCEL</span>
+            </li>
+            <li class="sidebar-item">
+              <span class="sidebar-info">RESPONSIVE / ADAPTIVE DESIGN</span>
+            </li>
+          </ul>
         </div>
-
-        <h3>TECHNICAL SKILLS:</h3>
-        <ul>
-          <li class="sidebar-item">
-            <span class="sidebar-info">Some skills</span>
-          </li>
-          <li class="sidebar-item">
-            <span class="sidebar-info">Some skills</span>
-          </li>
-          <li class="sidebar-item">
-            <span class="sidebar-info">Some skills</span>
-          </li>
-          <li class="sidebar-item">
-            <span class="sidebar-info">Some skills</span>
-          </li>
-          <li class="sidebar-item">
-            <span class="sidebar-info">Some skills</span>
-          </li>
-          <li class="sidebar-item">
-            <span class="sidebar-info">Some skills</span>
-          </li>
-          <li class="sidebar-item">
-            <span class="sidebar-info">Some skills</span>
-          </li>
-          <li class="sidebar-item">
-            <span class="sidebar-info">Some skills</span>
-          </li>
-        </ul>
-        <h3>SOFT SKILLS:</h3>
-        <ul>
-          <li class="sidebar-item">
-            <span class="sidebar-info">Some skills</span>
-          </li>
-          <li class="sidebar-item">
-            <span class="sidebar-info">Some skills</span>
-          </li>
-          <li class="sidebar-item">
-            <span class="sidebar-info">Some skills</span>
-          </li>
-          <li class="sidebar-item">
-            <span class="sidebar-info">Some skills</span>
-          </li>
-        </ul>
-        <h3>LANGUAGES:</h3>
-        <ul>
-          <li class="sidebar-item">
-            <span class="sidebar-info">Some language</span>
-          </li>
-          <li class="sidebar-item">
-            <span class="sidebar-info">Some language</span>
-          </li>
-          <li class="sidebar-item">
-            <span class="sidebar-info">Some language</span>
-          </li>
-        </ul>
-        <h3>CONTACTS:</h3>
-        <ul>
-          <li><a href="#" class="contact-link">Contact</a></li>
-          <li><a href="#" class="contact-link">Contact</a></li>
-          <li><a href="#" class="contact-link">Contact</a></li>
-          <li><a href="#" class="contact-link">Contact</a></li>
-        </ul>
+        <!-- SOFT SKILLS -->
+        <div class="soft-skills-container">
+          <h3>SOFT SKILLS:</h3>
+          <ul class="soft-skills-list">
+            <li class="sidebar-item">
+              <span class="sidebar-info">Teamwork</span>
+            </li>
+            <li class="sidebar-item">
+              <span class="sidebar-info">Good Communication</span>
+            </li>
+            <li class="sidebar-item">
+              <span class="sidebar-info">Responsibility</span>
+            </li>
+            <li class="sidebar-item">
+              <span class="sidebar-info">Punctuality</span>
+            </li>
+          </ul>
+        </div>
+        <!-- LANGUAGES -->
+        <div class="languages-container">
+          <h3>LANGUAGES:</h3>
+          <ul>
+            <li class="sidebar-item">
+              <span class="sidebar-info">English - basic</span>
+            </li>
+            <li class="sidebar-item">
+              <span class="sidebar-info">Ukrainian - native</span>
+            </li>
+            <li class="sidebar-item">
+              <span class="sidebar-info">Russian - native</span>
+            </li>
+          </ul>
+        </div>
+        <!-- CONTACTS -->
+        <div class="contacts-container">
+          <h3>CONTACTS:</h3>
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a href="tel:+380985709728" class="contact-link"
+                >+380 (98) 570 97 28</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a href="mailto:Sergiy.Khrapun@gmail.com" class="contact-link"
+                >Sergiy.Khrapun@gmail.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a
+                href="https://github.com/Serhii-Khrapun"
+                class="contact-link"
+                rel="noopener noreferrer"
+                target="_blank"
+                >GIT</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a
+                href="https://www.linkedin.com/in/serhii-khrapun-74b908232/"
+                class="contact-link"
+                rel="noopener noreferrer"
+                target="_blank"
+                >Linkedin</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
       <!-- ABOUT ME -->
-      <div>
+      <div class="about-me-container">
         <div class="about-me-section">
           <h1 class="about-me-title">Serhii Khrapun</h1>
           <h2 class="about-me-subtitle">Front-end Developer</h2>
@@ -106,24 +134,74 @@
           <h3 class="project-title">PROJECT EXPERIENCE:</h3>
           <ul class="project-list">
             <li class="project-item">
-              <p class="project-name">Project name:</p>
-              <p class="project-info">Project link:</p>
-              <p class="project-info">Technologies:</p>
+              <p class="project-name">Project name: Web Studio</p>
+              <a
+                class="project-link"
+                href="https://serhii-khrapun.github.io/goit-markup-hw-08/"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
+                Project link</a
+              >
+              <p class="project-info">Technologies: HTML, SASS, JS</p>
+              <p class="project-info">
+                About project: Mobile-first adaptive web-page
+              </p>
+              <p class="project-info">Role: Developer</p>
             </li>
             <li class="project-item">
-              <p class="project-name">Project name:</p>
-              <p class="project-info">Project link:</p>
-              <p class="project-info">Technologies:</p>
+              <p class="project-name">Project name: 3D Freedom</p>
+              <a
+                class="project-link"
+                href="https://tyomadw.github.io/team-project-group-8/"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
+                Project link</a
+              >
+              <p class="project-info">Technologies: HTML, SASS, JS, Parcel</p>
+              <p class="project-info">
+                About project: Mobile-first adaptive web-page.(Team work)
+              </p>
+              <p class="project-info">Role: Developer</p>
             </li>
             <li class="project-item">
-              <p class="project-name">Project name:</p>
-              <p class="project-info">Project link:</p>
-              <p class="project-info">Technologies:</p>
+              <p class="project-name">Project name: Image Finder</p>
+              <a
+                class="project-link"
+                href="https://serhii-khrapun.github.io/goit-js-hw-11/"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
+                Project link</a
+              >
+              <p class="project-info">
+                Technologies: HTML, CSS, JS, REST API, Parcel
+              </p>
+              <p class="project-info">
+                About project: A website with a responsive layout for image
+                search.
+              </p>
+              <p class="project-info">Role: Developer</p>
             </li>
             <li class="project-item">
-              <p class="project-name">Project name:</p>
-              <p class="project-info">Project link:</p>
-              <p class="project-info">Technologies:</p>
+              <p class="project-name">Project name: Filmoteka</p>
+              <a
+                class="project-link"
+                href="https://tyomadw.github.io/team-project-js-group-8/"
+                rel="noopener noreferrer"
+                target="_blank"
+              >
+                Project link</a
+              >
+              <p class="project-info">
+                Technologies: HTML, SASS, JS, REST API, Parcel
+              </p>
+              <p class="project-info">
+                About project: A website with a responsive layout with
+                authorization for choosing a movie.(Team work)
+              </p>
+              <p class="project-info">Role: Developer</p>
             </li>
           </ul>
         </div>
@@ -140,13 +218,20 @@
         <!-- EDUCATION -->
         <div class="education-section">
           <h3 class="education-title">EDUCATION:</h3>
-          <h4 class="education-subtitle">Place</h4>
-          <p class="education-info">напрямок</p>
-          <p class="education-info">час</p>
-
-          <h4 class="education-subtitle">Place</h4>
-          <p class="education-info">напрямок</p>
-          <p class="education-info">час</p>
+          <ul class="education-list">
+            <li class="education-item">
+              <h4 class="education-subtitle">
+                Ternopil Cooperative College of Trade and Economics
+              </h4>
+              <p class="education-info">Сommodity expert</p>
+              <p class="education-info">September 2011 - June 2014</p>
+            </li>
+            <li class="education-item">
+              <h4 class="education-subtitle">IT School GoIT Academy</h4>
+              <p class="education-info">FullStack Developer</p>
+              <p class="education-info">March 2021 - up to now</p>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
